# groupcheck

./: AUTHORS  Makefile.am  README  README.md  configure.ac  groupcheck.c  groupcheck.conf  groupcheck.h  groupcheck.service  main.c  meson.build  org.freedesktop.PolicyKit1.conf  test_bus.c  test_directory.c  test_groups.c  test_process.c
test_data/: groupcheck.policy
test_data/test_dir/: first.policy  second.policy
